syntax = "proto3";

package com.sushkevych.securitydevices.commonmodels.device;

option java_multiple_files = true;

message DeviceAttribute {
  string attributeType = 1;
  string attributeValue = 2;
}

message Device {
  string id = 1;
  string name = 2;
  string description = 3;
  string type = 4;
  repeated DeviceAttribute attributes = 5;
}

message DeviceList {
  repeated Device devices = 1;
}

message CreateDeviceRequest {
  Device device = 1;
}

message CreateDeviceResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    Device device = 1;
  }

  message Failure {
    string message = 100;
  }
}

message UpdateDeviceRequest {
  string deviceId = 1;
  Device device = 2;
}

message UpdateDeviceResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    Device device = 1;
  }

  message Failure {
    string message = 100;
  }
}

message GetByIdDeviceRequest {
  string deviceId = 1;
}

message GetByIdDeviceResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    Device device = 1;
  }

  message Failure {
    string message = 100;
  }
}

message GetAllDevicesRequest {

}

message GetAllDevicesResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    DeviceList devices = 1;
  }

  message Failure {
    string message = 100;
  }
}

message DeleteDeviceRequest {
  string deviceId = 1;
}

message DeleteDeviceResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {

  }

  message Failure {
    string message = 100;
  }
}
