syntax = "proto3";

package com.sushkevych.securitydevices.input.request.device.get_all.proto;

option java_multiple_files = true;

import "com/sushkevych/securitydevices/commonmodels/device/device.proto";

message GetAllDeviceRequest {
  commonmodels.device.DeviceRequest request = 1;
}

message GetAllDeviceResponse {
  commonmodels.device.DeviceResponse response = 1;
}
